Remove errant bracket

--- a/rules.tex
+++ b/rules.tex
@@ -61,7 +61,7 @@ The judgments for the theory are given inductive-recursively below.
   \infer{\Gamma\vdash \emp\hints}{}
   \qquad
   \infer{
-    \Gamma\vdash_\Sigma \mathcal{H}, a\equiv b:A\rangle\hints
+    \Gamma\vdash_\Sigma \mathcal{H}, a\equiv b:A\hints
   }{
     \Gamma\vdash_\Sigma \mathcal{H}\hints &
     \Gamma\vdash_\Sigma^\mathcal{H} A: \mathbb{U} &
