--- a/rules.tex
+++ b/rules.tex
@@ -107,9 +107,9 @@ The rules for the theory are given inductive-recursively below.
     \Gamma;\mathcal{H}\vdash_\Sigma \mathsf{reflect}\ p\ \mathsf{in}\ e \checks C
   }{
     \begin{array}{l}
-      \Gamma;\mathcal{H}\vdash_\Sigma p \infers \mathsf{Id}_A\,a\;b\\
-      \Gamma;(\mathcal{H}, a\equiv b:A)\vdash_\Sigma C\checks\uni\\
-      \Gamma;(\mathcal{H}, a\equiv b:A)\vdash_\Sigma e \checks C
+      \Gamma;\mathcal{H}\vdash_\Sigma p \infers \mathsf{Id}_A(M;N)\\
+      \Gamma;\mathcal{H}, M\equiv N:A\vdash_\Sigma C\checks\uni\\
+      \Gamma;\mathcal{H}, M\equiv N:A\vdash_\Sigma e \checks C
     \end{array}
   }
   \tag{Reflect}
@@ -150,8 +150,6 @@ The rules for the theory are given inductive-recursively below.
   \tag{Sigma}
 \end{equation}
 
-%% Should we give Martin-Löf's original induction principle for dependent products, and derive _@_ thence? It would be more symmetrical, though I do not know the degree to which this is a thing people do anymore.
-
 \begin{equation}
   \infer{
     \Gamma;\mathcal{H}\vdash_\Sigma\lambda [x]M\checks\Pi_A[x]B
@@ -168,6 +166,40 @@ The rules for the theory are given inductive-recursively below.
     \end{array}
   }
   \tag{Pi}
+\end{equation}
+
+\begin{equation}
+  \infer{
+    \Gamma;\mathcal{H}\vdash_\Sigma \mathsf{Id}_A(M;N)\infers\uni
+  }{
+    \begin{array}{l}
+      \Gamma;\mathcal{H}\vdash_\Sigma A\checks\uni\\
+      \Gamma;\mathcal{H}\vdash_\Sigma M\checks A\\
+      \Gamma;\mathcal{H}\vdash_\Sigma N\checks A
+    \end{array}
+  }
+  \qquad
+  \infer{
+    \Gamma;\mathcal{H}\vdash_\Sigma \mathsf{refl}\checks \mathsf{Id}_A(M;M)
+  }{
+    \Gamma;\mathcal{H}\vdash_\Sigma M\checks A
+  }
+  \tag{Id}
+\end{equation}
+
+\begin{equation}
+  \infer{
+    \Gamma;\mathcal{H}\vdash_\Sigma \mathsf{binderEq}(M; [y]N) \checks \mathsf{Id}_\uni(\mathrm{Q}_A[x]B;\mathrm{Q}_{A'}[x]B')
+  }{
+    \begin{array}{l}
+      \Gamma;\mathcal{H}\vdash_\Sigma \mathrm{Q}_A[x]B \checks\uni\\
+      \Gamma;\mathcal{H}\vdash_\Sigma \mathrm{Q}_A'[x]B' \checks\uni\\
+      \Gamma;\mathcal{H}\vdash_\Sigma M \checks \mathsf{Id}_\uni(A; A')\\
+      \Gamma,y:A;\mathcal{H},A\equiv A':\uni \vdash_\Sigma N\checks \mathsf{Id}_\uni([y/x]B; [y/x]B')
+    \end{array}&
+    \mathrm{Q}\in\{\Pi,\Sigma\}
+  }
+  \tag{BinderEq}
 \end{equation}
 
 \end{document}
