--- a/rules.tex
+++ b/rules.tex
@@ -216,4 +216,16 @@ The rules for the theory are given inductive-recursively below.
   \tag{Funext}
 \end{equation}
 
+\begin{equation}
+  \infer{
+    \Gamma;\mathcal{H}\vdash_\Sigma \mathsf{uip}(p; q)\infers\mathsf{Id}_{\mathsf{Id}_A(M;N)}(p;q)
+  }{
+    \begin{array}{l}
+      \Gamma;\mathcal{H}\vdash_\Sigma p\infers \mathsf{Id}_A(M;N)\\
+      \Gamma;\mathcal{H}\vdash_\Sigma q\checks \mathsf{Id}_A(M;N)
+    \end{array}
+  }
+  \tag{UIP}
+\end{equation}
+
 \end{document}
