--- a/rules.tex
+++ b/rules.tex
@@ -139,7 +139,7 @@ The rules for the theory are given inductive-recursively below.
   }
   \qquad
   \infer{
-    \Gamma;\mathcal{H}\vdash_\Sigma \mathsf{split}([u]C; [v,w]M; p)\infers [p/u]C
+    \Gamma;\mathcal{H}\vdash_\Sigma \mathsf{spread}([u]C; [v,w]M; p)\infers [p/u]C
   }{
     \begin{array}{l}
       \Gamma;\mathcal{H}\vdash_\Sigma p\infers \Sigma_A[x]B\\
