--- a/rules.tex
+++ b/rules.tex
@@ -80,7 +80,7 @@ The rules for the theory are given inductive-recursively below.
   \tag{Hints}
 \end{equation}
 
-\begin{equation}
+\begin{gather*}
   \infer{
     \Gamma;\mathcal{H}\vdash_\Sigma x\infers A
   }{
@@ -98,12 +98,10 @@ The rules for the theory are given inductive-recursively below.
   }{
     a\equiv b:A \in \mathcal{H}
   }
-  \qquad
-  \tag{Projection}
-\end{equation}
+\end{gather*}
 
-\begin{equation}
-  \infer{
+\begin{gather*}
+  \infer[\text{(Reflect)}]{
     \Gamma;\mathcal{H}\vdash_\Sigma \mathsf{reflect}\ p\ \mathsf{in}\ e \checks C
   }{
     \begin{array}{l}
@@ -112,64 +110,10 @@ The rules for the theory are given inductive-recursively below.
       \Gamma;\mathcal{H}, M\equiv N:A\vdash_\Sigma e \checks C
     \end{array}
   }
-  \tag{Reflect}
-\end{equation}
+\end{gather*}
 
-\begin{equation}
-  \infer{
-    \Gamma;\mathcal{H}\vdash_\Sigma\mathrm{Q}_A[x]B\infers\uni
-  }{
-    \begin{array}{l}
-      \Gamma;\mathcal{H}\vdash_\Sigma A \checks\uni\\
-      \Gamma,x:A;\mathcal{H}\vdash_\Sigma [x]B\checks\uni
-    \end{array} &
-    \mathrm{Q} \in \{ \Sigma, \Pi \}
-  }
-  \tag{Binders}
-\end{equation}
-
-\begin{equation}
-  \infer{
-    \Gamma;\mathcal{H}\vdash_\Sigma \langle a,b\rangle \checks \Sigma_A[x]B
-  }{
-    \begin{array}{l}
-      \Gamma;\mathcal{H}\vdash_\Sigma a\checks A\\
-      \Gamma;\mathcal{H}\vdash_\Sigma b\checks [a/x]B
-    \end{array}
-  }
-  \qquad
-  \infer{
-    \Gamma;\mathcal{H}\vdash_\Sigma \mathsf{spread}([u]C; [v,w]M; p)\infers [p/u]C
-  }{
-    \begin{array}{l}
-      \Gamma;\mathcal{H}\vdash_\Sigma p\infers \Sigma_A[x]B\\
-      \Gamma,u:\Sigma_A[x]B;\mathcal{H}\vdash_\Sigma [u]C\checks\uni\\
-      \Gamma,v:A,w:[v/x]B;\mathcal{H}\vdash_\Sigma [v,w]M\checks[\langle v,w\rangle/u]C
-    \end{array}
-  }
-  \tag{Sigma}
-\end{equation}
-
-\begin{equation}
-  \infer{
-    \Gamma;\mathcal{H}\vdash_\Sigma\lambda [x]M\checks\Pi_A[x]B
-  }{
-    \Gamma,x:A;\mathcal{H}\vdash_\Sigma [x]M\checks[x]B
-  }
-  \qquad
-  \infer{
-    \Gamma;\mathcal{H}\vdash_\Sigma f\mathop{@}c \infers [c/x]B
-  }{
-    \begin{array}{l}
-      \Gamma;\mathcal{H}\vdash_\Sigma f\infers\Pi_A[x]B\\
-      \Gamma;\mathcal{H}\vdash_\Sigma c\checks A
-    \end{array}
-  }
-  \tag{Pi}
-\end{equation}
-
-\begin{equation}
-  \infer{
+\begin{gather*}
+  \infer[(\text{$\mathsf{Id}$-form})]{
     \Gamma;\mathcal{H}\vdash_\Sigma \mathsf{Id}_A(M;N)\infers\uni
   }{
     \begin{array}{l}
@@ -179,16 +123,33 @@ The rules for the theory are given inductive-recursively below.
     \end{array}
   }
   \qquad
-  \infer{
+  \infer[(\text{$\mathsf{Id}$-intro})]{
     \Gamma;\mathcal{H}\vdash_\Sigma \mathsf{refl}\checks \mathsf{Id}_A(M;M)
   }{
     \Gamma;\mathcal{H}\vdash_\Sigma M\checks A
+  }\\
+  \infer[(\text{$\mathsf{Id}$-eq})]{
+    \Gamma;\mathcal{H}\vdash_\Sigma \mathsf{uip}(p; q)\infers\mathsf{Id}_{\mathsf{Id}_A(M;N)}(p;q)
+  }{
+    \begin{array}{l}
+      \Gamma;\mathcal{H}\vdash_\Sigma p\infers \mathsf{Id}_A(M;N)\\
+      \Gamma;\mathcal{H}\vdash_\Sigma q\checks \mathsf{Id}_A(M;N)
+    \end{array}
   }
-  \tag{Id}
-\end{equation}
+\end{gather*}
 
-\begin{equation}
-  \infer{
+\begin{gather*}
+  \infer[\text{(Binder-form)}]{
+    \Gamma;\mathcal{H}\vdash_\Sigma\mathrm{Q}_A[x]B\infers\uni
+  }{
+    \begin{array}{l}
+      \Gamma;\mathcal{H}\vdash_\Sigma A \checks\uni\\
+      \Gamma,x:A;\mathcal{H}\vdash_\Sigma [x]B\checks\uni
+    \end{array} &
+    \mathrm{Q} \in \{ \Sigma, \Pi \}
+  }
+  \\
+  \infer[\text{(Binder-eq)}]{
     \Gamma;\mathcal{H}\vdash_\Sigma \mathsf{binderEq}(Q_A[x]B; Q_{A'}[x]B'; M; [y]N) \infers \mathsf{Id}_\uni(\mathrm{Q}_A[x]B;\mathrm{Q}_{A'}[x]B')
   }{
     \begin{array}{l}
@@ -199,12 +160,66 @@ The rules for the theory are given inductive-recursively below.
     \end{array}&
     \mathrm{Q}\in\{\Pi,\Sigma\}
   }
-  \tag{BinderEq}
-\end{equation}
+\end{gather*}
 
-% Do we need something more fancy for this?
-\begin{equation}
-  \infer{
+\begin{gather*}
+  \infer[\text{($\Sigma$-intro)}]{
+    \Gamma;\mathcal{H}\vdash_\Sigma \langle a,b\rangle \checks \Sigma_A[x]B
+  }{
+    \begin{array}{l}
+      \Gamma;\mathcal{H}\vdash_\Sigma a\checks A\\
+      \Gamma;\mathcal{H}\vdash_\Sigma b\checks [a/x]B
+    \end{array}
+  }
+  \qquad
+  \infer[\text{($\Sigma$-elim$^+$)}]{
+    \Gamma;\mathcal{H}\vdash_\Sigma \mathsf{spread}([u]C; [v,w]M; p)\infers [p/u]C
+  }{
+    \begin{array}{l}
+      \Gamma;\mathcal{H}\vdash_\Sigma p\infers \Sigma_A[x]B\\
+      \Gamma,u:\Sigma_A[x]B;\mathcal{H}\vdash_\Sigma [u]C\checks\uni\\
+      \Gamma,v:A,w:[v/x]B;\mathcal{H}\vdash_\Sigma [v,w]M\checks[\langle v,w\rangle/u]C
+    \end{array}
+  }\\
+  \infer[\text{($\Sigma$-elim$^-_1$)}]{
+    \Gamma;\mathcal{H}\vdash_\Sigma \pi_1M\infers A
+  }{
+    \Gamma;\mathcal{H}\vdash_\Sigma M \infers \Sigma_A[x]B
+  }
+  \qquad
+  \infer[\text{($\Sigma$-elim$^-_2$)}]{
+    \Gamma;\mathcal{H}\vdash_\Sigma \pi_2M\infers [\pi_1M/x]B
+  }{
+    \Gamma;\mathcal{H}\vdash_\Sigma M\infers\Sigma_A[x]B
+  }\\
+  \infer[\text{($\Sigma$-eq)}]{
+    \Gamma;\mathcal{H}\vdash_\Sigma \mathsf{pairEq}(M;N;p;q)\infers \mathsf{Id}_{\Sigma_A[x]B}(M; N)
+  }{
+    \begin{array}{l}
+      \Gamma;\mathcal{H}\vdash_\Sigma M \infers \Sigma_A[x]B\\
+      \Gamma;\mathcal{H}\vdash_\Sigma N \checks \Sigma_A[x]B\\
+      \Gamma;\mathcal{H}\vdash_\Sigma p\checks \mathsf{Id}_A(\pi_1M;\pi_1N)\\
+      \Gamma;(\mathcal{H}, \pi_1M\equiv\pi_1N:A)\vdash_\Sigma q\checks\mathsf{Id}_{[\pi_1M/x]B}(\pi_2M;\pi_2N)
+    \end{array}
+  }
+\end{gather*}
+
+\begin{gather*}
+  \infer[\text{($\Pi$-intro)}]{
+    \Gamma;\mathcal{H}\vdash_\Sigma\lambda [x]M\checks\Pi_A[x]B
+  }{
+    \Gamma,x:A;\mathcal{H}\vdash_\Sigma [x]M\checks[x]B
+  }\qquad
+  \infer[\text{($\Pi$-elim)}]{
+    \Gamma;\mathcal{H}\vdash_\Sigma f\mathop{@}c \infers [c/x]B
+  }{
+    \begin{array}{l}
+      \Gamma;\mathcal{H}\vdash_\Sigma f\infers\Pi_A[x]B\\
+      \Gamma;\mathcal{H}\vdash_\Sigma c\checks A
+    \end{array}
+  }
+  \\
+  \infer[\text{($\Pi$-eq)}]{
     \Gamma;\mathcal{H}\vdash_\Sigma \mathsf{funext}(f; g; [u]M)\infers \mathsf{Id}_{\Pi_A[x]B}(f; g)
   }{
     \begin{array}{l}
@@ -213,19 +228,6 @@ The rules for the theory are given inductive-recursively below.
       \Gamma,u:A;\mathcal{H}\vdash_\Sigma M\checks \mathsf{Id}_{[u/x]B}(f\mathop{@}u;g\mathop{@}u)
     \end{array}
   }
-  \tag{Funext}
-\end{equation}
-
-\begin{equation}
-  \infer{
-    \Gamma;\mathcal{H}\vdash_\Sigma \mathsf{uip}(p; q)\infers\mathsf{Id}_{\mathsf{Id}_A(M;N)}(p;q)
-  }{
-    \begin{array}{l}
-      \Gamma;\mathcal{H}\vdash_\Sigma p\infers \mathsf{Id}_A(M;N)\\
-      \Gamma;\mathcal{H}\vdash_\Sigma q\checks \mathsf{Id}_A(M;N)
-    \end{array}
-  }
-  \tag{UIP}
-\end{equation}
+\end{gather*}
 
 \end{document}
